# vscode-pyspark-databricks

./: Dockerfile  entrypoint.py  pipeline.py  pipeline_demo.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
product_info_pipeline/metadata/: .part-00000.crc  part-00000
product_info_pipeline/stages/0_StringIndexer_a542918f3da0/data/: .part-00000-5792596b-8e67-4701-822d-c124c99474b2-c000.snappy.parquet.crc  part-00000-5792596b-8e67-4701-822d-c124c99474b2-c000.snappy.parquet
product_info_pipeline/stages/0_StringIndexer_a542918f3da0/metadata/: .part-00000.crc  part-00000
product_info_pipeline/stages/1_VectorAssembler_b33983c177b7/metadata/: .part-00000.crc  part-00000
