[tool.poetry]
name = "vscode-pyspark-databricks"
version = "0.1.0"
description = ""
authors = ["authorname <email@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pyspark = "^3.5.0"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"